Fixed some css bugs on mobile.

--- a/assets/development/css/_mq-mobile.scss
+++ b/assets/development/css/_mq-mobile.scss
@@ -62,9 +62,25 @@
 		}
 
 		section {
-			padding-top: 20px;
 			margin-bottom: 20px;
+			padding-top: 20px;
 
+			&:nth-child(odd) {
+
+				figure,
+				aside {
+					margin-left: 0;
+					float: none;
+					width: 100%;
+				}
+			}
+
+			figure,
+			aside {
+				margin-left: 0;
+				float: none;
+				width: 100%;
+			}
 		}
 	}
 }
